fix error contrast

--- a/style.css
+++ b/style.css
@@ -1072,5 +1072,5 @@ h4 {
     color: #000000!important;
 }
 #footer__title {
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
